--- a/articles/er-evaluation-models/fsm.tex
+++ b/articles/er-evaluation-models/fsm.tex
@@ -112,8 +112,7 @@ While the model shows that the classification of pairs in link, non-link and
 probable link is optimal in terms of statistical power, sound criticism of the
 model was made in literature~\cite{tancredi2011fsmcrit}.
 The criticism centers mostly around the assumptions of probabilistic
-independence~\cite{winkler2014matching,tancredi2011fsmcrit} between various
-events described in the model.
+independence between various events described in the model~\cite{winkler2014matching,tancredi2011fsmcrit}.
 While the criticism is constructive and leads to substantial improvements added
 to the original model, the substrate of the improved models remains a
 probabilistic one.
