--- a/articles/er-evaluation-models/main.tex
+++ b/articles/er-evaluation-models/main.tex
@@ -4,6 +4,7 @@
 \usepackage{amsmath,amsfonts,amsthm}
 \usepackage{algorithmic}
 \usepackage{balance}
+\usepackage{booktabs}
 \usepackage[caption=false,font=normalsize,labelfont=sf,textfont=sf]{subfig}
 \usepackage{enumitem}
 \usepackage{hyperref}
